--- a/package.json
+++ b/package.json
@@ -1,18 +1,48 @@
 {
   "name": "mayo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.4",
+    "@mapbox/sphericalmercator": "^1.2.0",
+    "@react-native-camera-roll/camera-roll": "^5.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@rnmapbox/maps": "rnmapbox/maps",
+    "axios": "^1.3.6",
+    "deprecated-react-native-prop-types": "^4.1.0",
+    "expo": "~48.0.21",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-task-manager": "~11.1.1",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.14",
+    "react-native-action-button": "^2.8.5",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-nodemediaclient": "^0.2.20",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-view-shot": "3.5.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
